--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +127,8 @@
     "        r's/\\\\\\\\\\n/ \\\\\\\\\\n/g',\n",
     "        r'1 while s/\\$nan( \\\\pm nan)?\\$/-/g',\n",
     "        # Two digits\n",
-    "        r's/\\\\pm 0.00?\\$/\\$/g',\n",
+    "        r's/ \\\\pm 0.00?\\$/\\$/g',\n",
+    "        r's/ \\\\pm nan?\\$/\\$/g',\n",
     "        r's/(\\d\\.\\d)( |\\$)/${1}0$2/g',\n",
     "        # arraystretch\n",
     "        r's/(\\\\begin\\{table\\*\\})/\\\\renewcommand\\{\\\\arraystretch\\}\\{1.2\\}\\n\\n\\n$1/g',\n",
@@ -186,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,13 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets.real_world_datasets import Datasets as RealWorldDatasets\n",
     "from datasets.density_datasets import Datasets as DensityDatasets\n",
     "# from src.utils.metrics import METRICS, SELECTED_METRICS\n",
+    "from src.utils.metrics import METRIC_ABBREV_PLAIN\n",
     "\n",
     "METRICS = [\n",
     "    \"DISCO\",\n",
@@ -330,6 +323,9 @@
     "    # \"DB\",\n",
     "    # \"CH\",\n",
     "]\n",
+    "\n",
+    "RUNTIME_METRICS = METRICS.copy()\n",
+    "RUNTIME_METRICS.remove(\"CVDD\")\n",
     "\n",
     "configs = {\n",
     "    # Real World Datasets\n",
@@ -458,22 +454,83 @@
     "    #     \"latex_coloring_axis\": 1,\n",
     "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
     "    # },\n",
+    "    # Runtimes\n",
+    "    \"real_world_colored_row_wise_time\": {\n",
+    "        \"path\": \"results/real_world_standardized/\",\n",
+    "        \"latex_path\": \"latex/real_world_experiments_standardized_time.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": METRICS,\n",
+    "        \"metric_abbrev\": METRIC_ABBREV_PLAIN,\n",
+    "        \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"time\"],\n",
+    "        \"caption\": \"Total time runtime on real world datasets. (coloring excluded CVDD)\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
+    "    \"real_world_colored_row_wise_process_time\": {\n",
+    "        \"path\": \"results/real_world_standardized/\",\n",
+    "        \"latex_path\": \"latex/real_world_experiments_standardized_process_time.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": METRICS,\n",
+    "        \"metric_abbrev\": METRIC_ABBREV_PLAIN,\n",
+    "        \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"process_time\"],\n",
+    "        \"caption\": \"Total process runtime on real world datasets. (coloring excluded CVDD)\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
+    "    \"density_colored_row_wise_time\": {\n",
+    "        \"path\": \"results/density_standardized/\",\n",
+    "        \"latex_path\": \"latex/density_experiments_standardized_time.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": METRICS,\n",
+    "        \"metric_abbrev\": METRIC_ABBREV_PLAIN,\n",
+    "        \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"time\"],\n",
+    "        \"caption\": \"Total time runtime on density datasets. (coloring excluded CVDD)\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
+    "    \"density_colored_row_wise_process_time\": {\n",
+    "        \"path\": \"results/density_standardized/\",\n",
+    "        \"latex_path\": \"latex/density_experiments_standardized_process_time.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": METRICS,\n",
+    "        \"metric_abbrev\": METRIC_ABBREV_PLAIN,\n",
+    "        \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"process_time\"],\n",
+    "        \"caption\": \"Total process runtime on density datasets. (coloring excluded CVDD)\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generated: `latex/real_world_experiments_standardized_process_time.tex`\n",
+      "Generated: `latex/real_world_experiments_standardized_time.tex`\n",
       "Generated: `latex/real_world_experiments_standardized.tex`\n",
       "Generated: `latex/real_world_experiments.tex`\n",
       "Generated: `latex/density_experiments.tex`\n",
-      "Generated: `latex/density_experiments_standardized.tex`\n"
+      "Generated: `latex/density_experiments_standardized_time.tex`\n",
+      "Generated: `latex/density_experiments_standardized.tex`\n",
+      "Generated: `latex/density_experiments_standardized_process_time.tex`\n"
      ]
     }
    ],
@@ -495,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +561,7 @@
        "1.6229067378440645"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +584,7 @@
        "47275.21919050223"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +633,7 @@
        " 1.712524832022782]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
